# artefact

./: .cursorrules  .gitignore  METHODOLOGY.md  README.md  SPECIFICATIONS.md  manage.py  pyproject.toml  pytest.ini
artefact/: asgi.py  settings.py  urls.py  wsgi.py
artefacts/: apps.py
chats/: models.py  views.py
chats/migrations/: 0001_initial.py  0002_botmessage_humanmessage_alter_message_options_and_more.py  0003_remove_message_chat.py
templates/: index.html
tests/: conftest.py  test_chats_views.py
